# BayesianOptimization

./: setup.cfg  tox.ini
bayes_opt/: __init__.py  bayesian_optimization.py  constraint.py  domain_reduction.py  event.py  logger.py  observer.py  target_space.py  types.py  util.py
bayes_opt/constraint/: __init__.py  base_constraint_model.py  common.py  constraint_model.py  multiple_constraint_model.py  single_constraint_model.py
tests/: test_observer.py
