[metadata]
description-file = README.md

[tool:pytest]
;addopts = -p no:doctest --xdoctest --xdoctest-style=google
norecursedirs = .git ignore build __pycache__
filterwarnings= default

[coverage:run]
branch = True
source = bayes_opt
command_line = -m pytest

[coverage:report]
exclude_lines =
    pragma: no cover
    .*  # pragma: no cover
    .*  # nocover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if 0:
    verbose = .*
    raise
    pass
    if __name__ == .__main__.:
    print(.*)

omit =
    */setup.py
    examples/*
    tests/*
    bayes_opt/logger.py

[mypy]
files = bayes_opt
python_version = 3.8

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True
